[package]
name = "mvgal_safe"
version = "0.2.0"
edition = "2021"
authors = ["AxoGM"]
description = "Rust safety-critical subsystems for MVGAL"
license = "MIT OR Apache-2.0"
readme = "README.md"
 keywords = ["gpu", "multi-gpu", "vulkan", "compute", "safety"]
categories = ["hardware-support", "api-bindings"]

[lib]
name = "mvgal_safe"
crate-type = ["staticlib", "rlib"]
path = "safe/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libc = "0.2"

[features]
default = []
# Enable C FFI bindings
ffi = []

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.release-with-debug]
inherits = "release"
debug = true
strip = false
