# SPDX-License-Identifier: MIT OR Apache-2.0

[package]
name = "mvgal_safe"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "MVGAL runtime Rust safety components"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
libc = "0.2"

[lib]
name = "mvgal_safe"
path = "lib.rs"
crate-type = ["staticlib", "rlib"]
