# SPDX-License-Identifier: MIT OR Apache-2.0

[package]
name = "capability_model"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "MVGAL GPU capability normalization and comparison"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }

[lib]
name = "mvgal_capability"
crate-type = ["staticlib", "rlib"]
