# SPDX-License-Identifier: MIT OR Apache-2.0

[package]
name = "fence_manager"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "MVGAL cross-device fence lifecycle management"

[dependencies]
serde = { workspace = true }

[lib]
name = "mvgal_fence"
crate-type = ["staticlib", "rlib"]
